webserver/kubia-manual.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kubia-manual
  labels:
    creation_method: manual
    env: prod
spec:
  containers:
  - name: kubia
    image: mdeichmann/kubia
    ports:
    - containerPort: 8080
